# Lab5

./: .travis.yml  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: Lab5-2sem2.hpp  Lab5.hpp
sources/: Lab5.cpp  Laboratory-work-5-sem2.cpp
tests/: CMakeLists.txt
tests/source/: init.cpp
